METAMODEL-1154: Added model for doing deletes and updates on table data
